--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@aws-sdk/client-kms": "^3.964.0",
     "@aws-sdk/client-secrets-manager": "^3.958.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
